# Interval-Scheduler-API

./: .gitignore  README.md  pyproject.toml
src/smart_scheduler/: __init__.py  algo.py  api.py  cli.py  models.py  store.py
tests/: conftest.py  test_algo.py  test_api.py
