[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-scheduler"
version = "0.1.0"
description = "Algo-driven Smart Scheduler service (weighted interval scheduling)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.28.0",
]

[project.scripts]
smart-scheduler = "smart_scheduler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
